# atlas-enhancement

./: .gitignore  HPC_PIXI_IMPLEMENTATION_PLAN.md  PROJECT_PROGRESS.md  download_allen_10.py  inspect_allen_10.py  pixi.toml  prepare_isocortex_10.py
flatmap/code/flatpath/: Makefile
flatmap/code/surf_cgal/: CMakeLists.txt  Flatten_Authalic.cxx  Flatten_Authalic_Iterative.cxx  Reconstruct_JetAdv.cxx  Reconstruct_PCAdv.cxx  Reconstruct_PCAlpha.cxx
flatmap/code/utils/: extract_iso_voxels.py  off2ply.awk
flatmap/examples/: genfiles_isocortex.mk
flatmap/workflow/: config.mk
